feat: improve error when loading biomes (#2241)